--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="spotlight">
 						<div class="content">
 							<header class="major">
-								<h2>Our Mission</h2>
+								<h2>OUR MISSION</h2>
 							</header>
 							<p>Our mission is to ease the transition back to in-person learning by creating a safe
 								environment to build effective study habits. This is done through the practices of
