--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		</noscript>
 	</head>
 
-	<body class="is-preload">
+	<body class="is-preload" onload="startTime()">
+		<div id="txt"></div>
 		<div id="wrapper">
 			<header id="header" class="alt">
 				<span class="logo"><img style="max-width: 22%" src="images/logo3.png" alt="" /></span>
